# eth3d-multi-view-evaluation

./: CMakeLists.txt  README.md  batch_evaluate.py
.github/workflows/: build.yml  docker.yml
docker/: Dockerfile
src/: main.cc
